fix text alignment

--- a/public/styles.css
+++ b/public/styles.css
@@ -105,7 +105,7 @@ input, .endScore, .gameScore, .label{
   text-align: center;
   font-size: 3vh;
   border: 1px solid black;
-  line-height: 4vh;
+  line-height: 5vh;
 }
 .endScore, .label, .gameScore{
   background-color: #BCBCBC;
